Feather-Trace: add x86 binary rewriting implementation
This patch adds the x86-specific implementation of Feather-Trace
triggers that works by rewriting jump instructions.

--- a/arch/x86/kernel/Makefile
+++ b/arch/x86/kernel/Makefile
@@ -130,6 +130,8 @@ else
 obj-y					+= unwind_guess.o
 endif
 
+obj-$(CONFIG_FEATHER_TRACE)	+= ft_event.o
+
 ###
 # 64 bit specific files
 ifeq ($(CONFIG_X86_64),y)
