--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -2776,6 +2776,6 @@ source "arch/x86/kvm/Kconfig"
 source "lib/Kconfig"
 
 config ARCH_HAS_FEATHER_TRACE
-	def_bool n
+	def_bool y
 
 source "litmus/Kconfig"
