--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -2210,5 +2210,8 @@ source "lib/Kconfig"
 
 source "arch/arm/kvm/Kconfig"
 
+config ARCH_HAS_FEATHER_TRACE
+	def_bool n
+
 source "litmus/Kconfig"
 
