--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -2123,5 +2123,8 @@ source "arch/arm/kvm/Kconfig"
 config ARCH_HAS_FEATHER_TRACE
 	def_bool n
 
+config ARCH_HAS_SEND_PULL_TIMERS
+	def_bool n
+
 source "litmus/Kconfig"
 
