--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -25,3 +25,6 @@ obj-$(CONFIG_SCHED_DEBUG) += debug.o
 obj-$(CONFIG_CGROUP_CPUACCT) += cpuacct.o
 obj-$(CONFIG_CPU_FREQ) += cpufreq.o
 obj-$(CONFIG_CPU_FREQ_GOV_SCHEDUTIL) += cpufreq_schedutil.o
+
+# LITMUS^RT scheduling class
+obj-y += litmus.o
