--- a/litmus/Makefile
+++ b/litmus/Makefile
@@ -23,7 +23,7 @@ obj-y     = sched_plugin.o litmus.o \
 	    sched_psn_edf.o \
 	    sched_pfp.o
 
-
+obj-$(CONFIG_PLUGIN_CEDF) += sched_cedf.o
 
 obj-$(CONFIG_FEATHER_TRACE) += ft_event.o ftdev.o
 obj-$(CONFIG_SCHED_TASK_TRACE) += sched_task_trace.o
