--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1076,3 +1076,9 @@ source "arch/arm64/crypto/Kconfig"
 endif
 
 source "lib/Kconfig"
+
+config ARCH_HAS_FEATHER_TRACE
+	def_bool n
+
+source "litmus/Kconfig"
+
