x86: note that the rescheduling IPI handler calls irq_enter
We need different IRQ tracing on x86 and arm/arm64...

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -2778,4 +2778,7 @@ source "lib/Kconfig"
 config ARCH_HAS_FEATHER_TRACE
 	def_bool y
 
+config ARCH_CALLS_IRQ_ENTER_ON_RESCHED_IPI
+	def_bool y
+
 source "litmus/Kconfig"
