arm: rescheduling handler IPI does not call irq_enter()

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -2213,5 +2213,8 @@ source "arch/arm/kvm/Kconfig"
 config ARCH_HAS_FEATHER_TRACE
 	def_bool n
 
+config ARCH_CALLS_IRQ_ENTER_ON_RESCHED_IPI
+	def_bool n
+
 source "litmus/Kconfig"
 
